--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <meta name="description" content="Basket list we application">
+        <meta name="keywords" content="HTML,CSS,JavaScript">
+        <meta name="author" content="Marina Layus">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="manifest" href="/manifest.webmanifest">
     <title>Basket</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+   
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 </head>
 
@@ -65,7 +69,7 @@
         <hr />
         <button id="signOutButton" class="signOut">Sign out</button>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
