min-width for input fixed, lang for html fixed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<html>
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
         <meta charset="UTF-8">
         <meta name="description" content="Basket list we application">
@@ -13,6 +11,7 @@
    
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
