Formatting adjustment to mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Basket list we application">
+        <meta name="description" content="Basket list web application">
         <meta name="keywords" content="HTML,CSS,JavaScript">
         <meta name="author" content="Marina Layus">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
