--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="description" content="Basket list web application">
         <meta name="keywords" content="HTML,CSS,JavaScript">
         <meta name="author" content="Marina Layus">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="manifest" href="/manifest.webmanifest">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
+        <link rel="manifest" href="/manifest.json">
     <title>Basket</title>
    
     <link rel="stylesheet" href="./style.css">
