--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="Basket list web application">
-        <meta name="keywords" content="HTML,CSS,JavaScript">
-        <meta name="author" content="Marina Layus">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="manifest" href="./manifest.json">
+    <meta charset="UTF-8">
+    <meta name="description" content="Basket list web application">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta name="author" content="Marina Layus">
+    <meta name="viewport" content="width=device-width">
+    <link rel="manifest" href="./manifest.json">
+
     <title>Basket</title>
-   
+
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/favicon.png" type="image/x-icon">
@@ -16,7 +18,7 @@
 
 <body>
     <header class="header">
-        <button id="menuBtn" class="button-bars">&#9776;</button>
+        <button id="menuBtn" class="button-bars" role="menu" >&#9776;</button>
         <h2>Shopping basket</h2>
     </header>
 
@@ -56,7 +58,7 @@
                 <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
             </div>
 
-            <button id="submitButton" class="button">Submit</button>
+            <button id="submitButton" class="button" role="submit">Submit</button>
         </div>
     </div>
     <!-- Sidenav-->
@@ -66,7 +68,7 @@
         <br />
         <div class="modal-header">sam@google.com</div>
         <hr />
-        <button id="signOutButton" class="signOut">Sign out</button>
+        <button id="signOutButton" class="signOut" role="button">Sign out</button>
     </div>
     <script src="./index.js"></script>
 </body>
