fixed roles, removed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <button id="menuBtn" class="button-bars" role="menu" >&#9776;</button>
+        <button id="menuBtn" class="button-bars">&#9776;</button>
         <h2>Shopping basket</h2>
     </header>
 
@@ -58,7 +58,7 @@
                 <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
             </div>
 
-            <button id="submitButton" class="button" role="submit">Submit</button>
+            <button id="submitButton" class="button">Submit</button>
         </div>
     </div>
     <!-- Sidenav-->
@@ -68,7 +68,7 @@
         <br />
         <div class="modal-header">sam@google.com</div>
         <hr />
-        <button id="signOutButton" class="signOut" role="button">Sign out</button>
+        <button id="signOutButton" class="signOut">Sign out</button>
     </div>
     <script src="./index.js"></script>
 </body>
